// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features > form > components >Label.tsx should not render optional because labelSettings.optionalIndicator is false 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
>
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <label
      className="a-form-label title-label"
      htmlFor="label1"
    >
      label.text
    </label>
  </div>
  
</div>
`;

exports[`features > form > components >Label.tsx should not render optional because readOnly 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
>
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <label
      className="a-form-label title-label"
      htmlFor="label1"
    >
      label.text
    </label>
  </div>
  
</div>
`;

exports[`features > form > components >Label.tsx should not render optional because required 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
>
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <label
      className="a-form-label title-label"
      htmlFor="label1"
    >
      label.text
    </label>
  </div>
  
</div>
`;

exports[`features > form > components >Label.tsx should not render optional because required is true even when labelSettings.optionalIndicator is true 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
>
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <label
      className="a-form-label title-label"
      htmlFor="label1"
    >
      label.text
    </label>
  </div>
  
</div>
`;

exports[`features > form > components >Label.tsx should render optional 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12"
>
  <div
    className="MuiGrid-root MuiGrid-item"
  >
    <label
      className="a-form-label title-label"
      htmlFor="label1"
    >
      label.text
      <span
        className="label-optional"
      >
         (general.optional)
      </span>
    </label>
  </div>
  
</div>
`;
